<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/cream"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/ungu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_faped"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/gambar_joki">

        </ImageView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/judul"
                android:textSize="14sp"
                android:textColor="@color/gold"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/aman"
                android:textColor="@color/gold"
                android:textStyle="italic"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@color/gold"
        android:layout_width="match_parent"
        android:layout_height="5dp">
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:background="@color/cream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/top_up"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <ImageView
                android:src="@drawable/ml"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp">

            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:layout_marginBottom="20dp"
                    android:text="@string/lengkapi_data"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/game_id"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

                    <EditText
                        android:hint="@string/masukan_id"
                        android:textSize="16sp"
                        android:textColor="@color/abu_tua"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </EditText>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/server_id"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

                <EditText
                    android:hint="@string/masukan_server"
                    android:textSize="16sp"
                    android:textColor="@color/abu_tua"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </EditText>


            </LinearLayout>



        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="100dp"
                android:background="@color/ungu">

                <TextView
                    android:id="@+id/csfaped"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/ungu"
                    android:justificationMode="inter_word"
                    android:padding="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/cs_faped"
                    android:textColor="@color/abu"
                    android:textSize="11sp"></TextView>

            </com.google.android.material.bottomnavigation.BottomNavigationView>

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>