<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/cream"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/ungu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_faped"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/gambar_joki">

        </ImageView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/judul"
                android:textSize="14sp"
                android:textColor="@color/gold"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/aman"
                android:textColor="@color/gold"
                android:textStyle="italic"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@color/gold"
        android:layout_width="match_parent"
        android:layout_height="5dp">
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="TOP UP GAMES"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_ml"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ml"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/gambar_joki">
                </ImageView>
                <ImageView
                    android:id="@+id/image_genshin"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/genshin"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/gambar_joki">
                </ImageView>
                <ImageView
                    android:id="@+id/image_apex"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/apex"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/gambar_joki">
                </ImageView>

            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_lol"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/lol"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/gambar_joki">
                </ImageView>
                <ImageView
                    android:id="@+id/image_valo"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/valo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/gambar_joki">
                </ImageView>
                <ImageView
                    android:id="@+id/image_ff"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ff"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/gambar_joki">
                </ImageView>
            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_game"
                    android:backgroundTint="@color/cream"
                    android:text="@string/game_lainnya"
                    android:textAllCaps="false"
                    android:textSize="12dp"
                    android:textColor="@color/abu_tua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="JOKI MOBILE LEGEND"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/eceran"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/gambar_joki">
                </ImageView>
                <ImageView
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/paketan"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/gambar_joki">
                </ImageView>
                <ImageView
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/clasic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/gambar_joki">
                </ImageView>
            </LinearLayout>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <com.google.android.material.bottomnavigation.BottomNavigationView
           android:layout_width="match_parent"
           android:layout_alignParentBottom="true"
           android:layout_height="100dp"
           android:background="@color/ungu">

           <TextView
               android:id="@+id/csfaped"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/ungu"
               android:justificationMode="inter_word"
               android:padding="10dp"
               android:layout_marginRight="5dp"
               android:text="@string/cs_faped"
               android:textColor="@color/abu"
               android:textSize="11sp"></TextView>

       </com.google.android.material.bottomnavigation.BottomNavigationView>

   </RelativeLayout>

</LinearLayout>



